# openlemmy

./: .dockerignore  .editorconfig  .env.example  .gitignore  404.html  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  search.html
.github/: dependabot.yml
.gitlab/: README.md
MKDOCS/: index.html
about/CONTRIBUTING/: index.html
about/LICENSE/: index.html
about/NAMESPACES/: index.html
css/: custom.css
docker/: index.html
docker/caddy/: Dockerfile
docker/lemmy/: Dockerfile
docker/lemmy-ui/: Dockerfile
docker/lemmy/config/: full.hjson  lemmy.hjson
docker/nginx/: Dockerfile
docker/nginx/config/: nginx.conf
docker/pictrs/: Dockerfile
docker/postgres/: Dockerfile
docs/: CNAME  MARKDOWN.md  MKDOCS.md  README.md  index.md
docs/about/: CONTRIBUTING.md  NAMESPACES.md
docs/docker/: README.md
docs/fonts/: README.md
docs/img/: icon.afdesign  logo.afdesign
docs/openlemmy/: README.md
docs/terraform/: README.md  STATE.md  WORKSPACES.md
fonts/: index.html
openlemmy/: index.html
openlemmy/MARKDOWN/: index.html
scripts/: db_backup.sh
search/: search_index.json
src/cli/: Cargo.toml  Dockerfile  README.md
src/cli/src/: main.rs
terraform/: README.md  index.html
terraform/STATE/: index.html
terraform/WORKSPACES/: index.html
terraform/do/: .example.tfvars  .terraform.lock.hcl  main.tf  variables.tf
