[package]
name = "openlemmy"
version = "0.1.0"
description = "Command Line Interface for the OpenLemmy project."
authors = ["Brett Wilcox <brett@scorpion.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://openlemmy.com"
repository = "https://github.com/openlemmy/openlemmy/"
keywords = ["cli", "openlemmy", "lemmy", "usenet", "docker", "terraform"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
